Fix bug input disable text on safari

--- a/src/features/dimension-weight/index.less
+++ b/src/features/dimension-weight/index.less
@@ -62,12 +62,13 @@
     }
   }
 
-  :global(.ant-input[disabled]) {
+  :global(input[disabled]) {
     color: @mono-color;
     background-color: transparent;
     border-color: transparent;
     border-bottom-color: transparent;
     cursor: default;
+    opacity: 1;
   }
 
   .tableContent {
